--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="author" content="Y. Peters">
-      <meta name="keywords" content="licht, geluid, dj sets, statafels, springkussen, verhuur, drive-in show, feest, Volendam, Edam, Oosthuizen, Middelie, Monnickendam, Broek in Waterland, Purmerend, Midden Beemster, De Rijp, Amsterdam, Hoorn, abraham, sarah, huwelijk, feest, bruiloft, evenement">
-      <meta name="robots" content="index, follow">
-      <meta name="revisit-after" content="15 days">
       <link rel="icon" type="image/x-icon" href="Images/Favicon.jpg">
       <link rel="stylesheet" type="text/css" href="Css/Stylesheet.css">
       <title>Muziekschool H & J</title>
@@ -24,10 +20,10 @@
 
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Over ons</a></li>
-            <li><a href="#">Tarieven</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Html/over.html">Over ons</a></li>
+            <li><a href="Html/tarieven.html">Tarieven</a></li>
+            <li><a href="Html/contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -39,7 +35,7 @@
     <div class="left">
         <h2>Muziekschool</h2>
         <h3>voor koperblazers en saxofonisten</h3>
-        <div class="picturel"><img src="Images/saxofoon.jpeg" alt="Saxofoon" width="325"></div>
+        <div><img id="left" src="Images/saxofoon.jpeg" alt="Saxofoon" width="400"></div>
 
         <p>Evenals bij de klarinet, is bij de saxofoon aan de onderkant van het mondstuk een enkel stuk riet bevestigd door middel van een metalen band (de saxofoon hoort dan ook bij de enkelriet-instrumenten).</p>
 
@@ -55,7 +51,7 @@
     <div class="main">
         <h2><span>Welkom bij muziekschool H&J</span></h2>
         <h3>Muziekschool voor koperblazers en saxofonisten</h3>
-        <div><img src="Images/trompet.jpeg" alt="trompet" width="325"></div>
+        <div><img src="Images/trompet.jpeg" alt="trompet" width="400"></div>
 
         <p>Zou het niet leuk zijn als je een saxofoon, trompet of een ander blaasinstrument zou kunnen bespelen ?<br>
         Dat vergt niet alleen veel oefening, maar het is ook belangrijk dat je daarbij de juiste hulp en ondersteuning krijgt.<br>
@@ -67,7 +63,7 @@
 
         <h2><span>SPECIALISATIE</span></h2>
         <h3>Muziekschool H&J is gespecialiseerd in jazzmuziek.</h3>
-        <div><img src="Images/saxofoon2.jpeg" alt="Saxofoon2" width="325"></div>
+        <div><img src="Images/saxofoon2.jpeg" alt="Saxofoon2" width="400"></div>
 
                     <br><br>
 
