--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div><img id="left" src="Images/saxofoon.jpeg" alt="Saxofoon" width="400"></div>
 
         <p>Evenals bij de klarinet, is bij de saxofoon aan de onderkant van het mondstuk een enkel stuk riet bevestigd door middel van een metalen band (de saxofoon hoort dan ook bij de enkelriet-instrumenten).</p>
-
+        
         <h3>Toonvorming</h3>
 
-        <p>Om geluid uit de saxofoon te krijgen, moet je lucht persen tussen het riet en het mondstuk.<br>
-        Hierdoor breng je het riet in trilling en wordt een toon gemaakt.<br>
-        Kleppen zorgen ervoor dat de gaten, die in de buis van het instrument zijn geboord, afgesloten kunnen worden.<br>
+        <p>Om geluid uit de saxofoon te krijgen, moet je lucht persen tussen het riet en het mondstuk.
+        Hierdoor breng je het riet in trilling en wordt een toon gemaakt.
+        Kleppen zorgen ervoor dat de gaten, die in de buis van het instrument zijn geboord, afgesloten kunnen worden.
         Door het indrukken of loslaten van deze kleppen, kun je op dit instrument verschillende tonen maken.</p>
 
     </div>
@@ -51,28 +51,28 @@
     <div class="main">
         <h2><span>Welkom bij muziekschool H&J</span></h2>
         <h3>Muziekschool voor koperblazers en saxofonisten</h3>
-        <div><img src="Images/trompet.jpeg" alt="trompet" width="400"></div>
+        <div><img src="Images/trompet.jpeg" alt="trompet" width="350"></div>
 
-        <p>Zou het niet leuk zijn als je een saxofoon, trompet of een ander blaasinstrument zou kunnen bespelen ?<br>
-        Dat vergt niet alleen veel oefening, maar het is ook belangrijk dat je daarbij de juiste hulp en ondersteuning krijgt.<br>
-        Hannah en Jesse, de muzikanten achter deze muziekschool, kunnen jou die ondersteuning geven.<br>
+        <p>Zou het niet leuk zijn als je een saxofoon, trompet of een ander blaasinstrument zou kunnen bespelen ?
+        Dat vergt niet alleen veel oefening, maar het is ook belangrijk dat je daarbij de juiste hulp en ondersteuning krijgt.
+        Hannah en Jesse, de muzikanten achter deze muziekschool, kunnen jou die ondersteuning geven.
         Ze zijn beiden afgestudeerd aan het conservatorium en hebben veel ervaring met het geven van muziekles.</p>
 
-        <p>De lessen worden gegeven in een prachtig en functioneel pand, waarin je ongestoord je gang kunt gaan.<br>
+        <p>De lessen worden gegeven in een prachtig en functioneel pand, waarin je ongestoord je gang kunt gaan.
         Ideaal om naar hartenlust te oefenen, zowel individueel als in groepsverband.</p>
 
         <h2><span>SPECIALISATIE</span></h2>
         <h3>Muziekschool H&J is gespecialiseerd in jazzmuziek.</h3>
-        <div><img src="Images/saxofoon2.jpeg" alt="Saxofoon2" width="400"></div>
+        <div><img src="Images/saxofoon2.jpeg" alt="Saxofoon2" width="350"></div>
 
                     <br><br>
 
-        <p>Veel muziekscholen richten zich op klassieke muziek.<br>
-        Bij Hannah en Jesse kun je echter ook les krijgen in jazzmuziek.<br>
-        Zoals je misschien weet, zijn koperblazers en saxofonisten een zeer belangrijk onderdeel bij jazz.<br>
+        <p>Veel muziekscholen richten zich op klassieke muziek.
+        Bij Hannah en Jesse kun je echter ook les krijgen in jazzmuziek.
+        Zoals je misschien weet, zijn koperblazers en saxofonisten een zeer belangrijk onderdeel bij jazz.
         Hannah en Jesse zijn grote jazzliefhebbers en hebben zich hierin gespecialiseerd.</p>
 
-        <p>Op deze website vind je veel informatie over wat deze muziekschool te bieden heeft, maar je kunt natuurlijk altijd vrijblijvend langskomen om meer informatie te krijgen.<br>
+        <p>Op deze website vind je veel informatie over wat deze muziekschool te bieden heeft, maar je kunt natuurlijk altijd vrijblijvend langskomen om meer informatie te krijgen.
         Je kunt dan ook kennismaken en kijken of je een klik hebt met Hannah en/of Jesse.</p>
     </div>
 </div>
