--- a/Html/contact.html
+++ b/Html/contact.html
@@ -6,131 +6,80 @@
       <link rel="icon" type="image/x-icon" href="../Images/Favicon.jpg">
       <link rel="stylesheet" type="text/css" href="../Css/Stylesheet.css">
       <title>H & J - Contact</title>
-<style></style>
-</head>
+    </head>
 
-<body>
-    <header>
-        <div class="header">
-            <h1>Muziekschool H & J</h1>
-            <br>
-            <h3>Contact</h3>
-        </div>
-    </header>
+    <body>
+        <header>
+            <div class="header">
+                <h1>Muziekschool H & J</h1>
+                <h3>Contact</h3>
+            </div>
+        </header>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../Html/over.html">Over ons</a></li>
-            <li><a href="../Html/tarieven.html">Tarieven</a></li>
-            <li><a href="../Html/contact.html">Contact</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Html/over.html">Over ons</a></li>
+                <li><a href="../Html/tarieven.html">Tarieven</a></li>
+                <li><a href="../Html/contact.html">Contact</a></li>
+            </ul>
+        </nav>
 
-<hr>
+        <hr id="hoofd">
 
-<section>
+        <section>
 
-<div class="flex-container">
-    <div class="left">
-        <h2>Adresgegevens</h2>
-    <br>
-    <p>Muziekschool H&J<br>
-    t.a.v Hannah en Jesse<br>
-    Industrieterrein 37<br>
-    5981 NK Panningen<br>
-    0123-456789<br>
-    muziekschoolhj@inlook.com</p>
-    <br>
-    <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2428.9850702079666!2d5.059500976409294!3d52.497509837894654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c6048f9c000fa9%3A0xfa6147aff206becd!2sFeest%20%2F%20Party%20Verhuur%20uit%20Volendam%20-%20Your%20Light%20Verhuur!5e0!3m2!1snl!2snl!4v1757866512807!5m2!1snl!2snl" width="400" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+            <div class="flex-container">
+                <div class="left">
+                    <h2>Adresgegevens</h2>
 
-    </div>
+                    <p>Muziekschool H&J<br>
+                    t.a.v Hannah en Jesse<br>
+                    Industrieterrein 37<br>
+                    5981 NK Panningen<br>
+                    0123-456789<br>
+                    muziekschoolhj@inlook.com</p>
 
-    <div class="main">
-        <h2><span>Contact</span></h2>
-        <h3>U kunt een bericht achterlaten via onderstaand contactformulier.</h3>
-        <form id="Contact" action="https://formspree.io/f/xjvddypd" method="post">
-            <table>
-                <tbody>
-                    <tr>
-                        <td><h1><b>Contactformulier</b></h1></td>
-                    </tr>
-                    <tr>
-                        <td>&nbsp;</td>
-                    </tr>
+                    <div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2428.9850702079666!2d5.059500976409294!3d52.497509837894654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c6048f9c000fa9%3A0xfa6147aff206becd!2sFeest%20%2F%20Party%20Verhuur%20uit%20Volendam%20-%20Your%20Light%20Verhuur!5e0!3m2!1snl!2snl!4v1757866512807!5m2!1snl!2snl"></iframe>
+                    </div>
+                </div>
 
-                    <tr>
-                        <td><b>Aanhef</b></td>
-                    </tr>
-                    <tr><td></td></tr>
-                    <tr><td></td></tr>
-                    <tr>
-                        <td>
-                            <input type="radio" name="geslacht" value="Vrouw">Mvr
-                            <input type="radio" name="geslacht" value="Man">Dhr
-                            <input type="radio" name="geslacht" value="Anders">Anders
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td><b>Voornaam</b></td>
-                    </tr>
-                    <tr><td></td></tr>
-                    <tr><td></td></tr>
+                <div class="main">
+                    <h2><span>Contact</span></h2>
+                    <h4>U kunt een bericht achterlaten via onderstaand contactformulier.</h4>
 
-                    <tr>
-                        <td><input type="text" name="Voornaam" placeholder="Voornaam"></td>
-                    </tr>
-                    <tr>
-                        <td><b>Achternaam</b></td>
-                        <td><input type="text" name="Achternaam" placeholder="Achternaam"></td>
-                    </tr>
-                    <tr>
-                        <td><b>Mailadres</b></td>
-                        <td><input type="email" name="Emailadres" placeholder="@Mailadres"></td>
-                    </tr>                    <tr>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td><b>Reden van contact</b></td>
-                        <td>
-                            <input type="radio" name="type" value="Vraag">Vraag
-                            <input type="radio" name="type" value="Klacht">Klacht
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td><b>Omschrijving</b></td>
-                        <td><textarea name="Bericht" placeholder="Bericht"></textarea></td>
-                    </tr>
-                    <tr>
-                        <td>&nbsp;</td>
-                    </tr>
-                    <tr>
-                        <td>
+                    <form id="Contact" action="https://formspree.io/f/xjvddypd" method="post" autocomplete="on">
+
+                                <label>Uw voornaam</label>
+                                    <input type="text" id="voornaam" name="voornaam" placeholder="Uw voornaam"><br>
+
+                                <label>Uw achternaam</label>
+                                    <input type="text" id="achternaam" name="achternaam" placeholder="Uw achternaam"><br>
+
+                                <label>Uw e-mailadres</label>
+                                    <input type="email" id="mailadres" name="postcode" placeholder="Uw e-mailadres"><br>
+
+                                <label>Land</label>
+                                    <select name="land">
+                                        <option value="Nederland" selected>Nederland</option>
+                                        <option value="Belgie">Belgie</option>
+                                        <option value="Anders">Anders</option>
+                                    </select><br>
+
+                                <label>Bericht</label>
+                                    <textarea name="Bericht" placeholder="Uw bericht hier"></textarea>
+                            <br><br><br>
+
                         <button class="btn" type="submit" value="Verzendknop">
-                        <strong>Verzend Info</strong>
+                            <strong>Verzend</strong>
                         </button>
-                        </td>
-                        <td>&nbsp;</td>
-                    </tr>
-                </tbody>
-            </table>
-        </form>
-    </div>
-</div>
-</section>
-<footer>
-<div class="footer"><h3><strong>©</strong>  copyright 2025 Muziekschool H & J</h3>
-<p>( Dit is de examen opdracht van Youri )</p></div>
-</footer>
-</body>
+                    </form>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer"><h3><strong>©</strong>  copyright 2025 Muziekschool H & J</h3>
+            <p>( Dit is de examen opdracht van Youri )</p></div>
+        </footer>
+    </body>
 </html>
