--- a/Html/over.html
+++ b/Html/over.html
@@ -6,91 +6,94 @@
       <link rel="icon" type="image/x-icon" href="../Images/Favicon.jpg">
       <link rel="stylesheet" type="text/css" href="../Css/Stylesheet.css">
       <title>H & J - Over ons</title>
-<style></style>
-</head>
+    </head>
 
-<body>
-    <header>
-        <div class="header">
-            <h1>Muziekschool H & J</h1>
-            <br>
-            <h3>Over ons</h3>
-        </div>
-    </header>
+    <body>
+        <header>
+            <div class="header">
+                <h1>Muziekschool H & J</h1>
+                <h3>Over ons</h3>
+            </div>
+        </header>
 
-    <nav>
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../Html/over.html">Over ons</a></li>
-            <li><a href="../Html/tarieven.html">Tarieven</a></li>
-            <li><a href="../Html/contact.html">Contact</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Html/over.html">Over ons</a></li>
+                <li><a href="../Html/tarieven.html">Tarieven</a></li>
+                <li><a href="../Html/contact.html">Contact</a></li>
+            </ul>
+        </nav>
 
-<hr>
+          <hr id="hoofd">
 
-<section>
+        <section>
 
-<div class="flex-container">
-    <div class="left">
-        <h2>Muziekschool</h2>
-        <h3>voor koperblazers en saxofonisten</h3>
-        <div class=><img id="left" src="../Images/saxofoon.jpeg" alt="Saxofoon" width="400"></div>
-        
-        <p>
-<img src="smiley.gif" alt="Smiley face" style="float:right;width:42px;height:42px;">
-A paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.
-</p>
+            <div class="flex-container">
+                <div class="left">
+                    <h2>Muziekschool voor iedereen !</h2>
+                    <div><img id="left" src="../Images/kind.jpeg" alt="Jeugd" width="400"></div><br>
 
-<p><strong>Float the image to the left:</strong></p>
-<p>
-<img src="smiley.gif" alt="Smiley face" style="float:left;width:42px;height:42px;">
-A paragraph with a floating image. A paragraph with a floating image. A paragraph with a floating image.  
-</p>
+                    <p>Voor een musicus zoals Jesse is het lastig om dat volledig professioneel te doen. 
+                    Zijn ervaring op de muziekschool bracht hem op het idee een eigen school te beginnen. 
+                    Jesse zag dat Hannah lesgeven ook geweldig goed kon, dus vroeg hij haar om mee te doen. 
+                    Ze vonden een mooi pand en ze startten met veel enthousiasme de muziekschool. 
+                    En daar heeft hij nooit spijt van gekregen ! 
+                    Bij Jesse en Hannah is het leuk én leerzaam !</p>
 
-        <p>Evenals bij de klarinet, is bij de saxofoon aan de onderkant van het mondstuk een enkel stuk riet bevestigd door middel van een metalen band (de saxofoon hoort dan ook bij de enkelriet-instrumenten).</p>
+                </div>
 
-        <h3>Toonvorming</h3>
+                <div class="main">
+                    <h2><span>Hannah</span></h2>
+                    <h4>Docente Muziek</h4>
 
-        <p>Om geluid uit de saxofoon te krijgen, moet je lucht persen tussen het riet en het mondstuk.<br>
-        Hierdoor breng je het riet in trilling en wordt een toon gemaakt.<br>
-        Kleppen zorgen ervoor dat de gaten, die in de buis van het instrument zijn geboord, afgesloten kunnen worden.<br>
-        Door het indrukken of loslaten van deze kleppen, kun je op dit instrument verschillende tonen maken.</p>
+                    <div><img id="hannah" src="../Images/hannah.jpeg" alt="Hannah"></div>
 
-    </div>
+                    <p>Hannah is een vrolijke, goedlachse vrouw van 39 jaar. 
+                    Ze is de vriendin van Jesse. 
+                    Hannah is al van jongs af aan geïnteresseerd in veel verschillende muziekstijlen.
+                    Haar ouders hebben het met de paplepel ingegoten.
+                    Langzamerhand werd de trompet echter haar favoriete instrument. 
+                    Ze speelde op school en had al jong optredens in buurthuizen, op braderieën, enzovoorts.</p><br>
 
-    <div class="main">
-        <h2><span>Welkom bij muziekschool H&J</span></h2>
-        <h3>Muziekschool voor koperblazers en saxofonisten</h3>
-        <div><img src="../Images/trompet.jpeg" alt="trompet" width="400"></div>
+                    <p>Hannah volgde zelf vanaf haar zesde jaar les op de muziekschool. Vanwege haar talent kreeg zij later privéles. 
+                    Op de middelbare school besteedde ze veel aandacht aan haar studie en de muziek schoot er een beetje bij in. 
+                    Maar toen ze haar diploma had behaald, was het conservatorium een logische keus. 
+                    Ook op het conservatorium viel haar talent op. 
+                    Ze werd gevraagd voor het studentenorkest en speelde in haar vrije in een jazzband. Daar ontmoette zij Jesse. 
+                    Gedurende haar studietijd kwamen medestudenten regelmatig naar haar toe met het verzoek om hulp. 
+                    Dat waren niet alleen trompetstudenten, maar ook studenten die andere blaasinstrumenten bespeelden. 
+                    Hannah merkte dat bijles geven haar heel goed afging en dat ze het ontzettend leuk vond.</p><br>
 
-        <p>Zou het niet leuk zijn als je een saxofoon, trompet of een ander blaasinstrument zou kunnen bespelen ?<br>
-        Dat vergt niet alleen veel oefening, maar het is ook belangrijk dat je daarbij de juiste hulp en ondersteuning krijgt.<br>
-        Hannah en Jesse, de muzikanten achter deze muziekschool, kunnen jou die ondersteuning geven.<br>
-        Ze zijn beiden afgestudeerd aan het conservatorium en hebben veel ervaring met het geven van muziekles.</p>
+                    <p>Toen Jesse met het idee kwam om samen een muziekschool te beginnen, hoefde Hannah niet lang na te denken. 
+                    Het was dé manier om van haar hobby haar beroep te maken en om muziek maken te combineren met lesgeven. 
+                    Bij Hannah zijn jong en oud in goede handen !</p><br>
 
-        <p>De lessen worden gegeven in een prachtig en functioneel pand, waarin je ongestoord je gang kunt gaan.<br>
-        Ideaal om naar hartenlust te oefenen, zowel individueel als in groepsverband.</p>
+                    <h2><span>Jesse</span></h2>
+                    <h4>Docent Muziek</h4>
 
-        <h2><span>SPECIALISATIE</span></h2>
-        <h3>Muziekschool H&J is gespecialiseerd in jazzmuziek.</h3>
-        <div><img src="../Images/saxofoon2.jpeg" alt="Saxofoon2" width="400"></div>
+                    <div><img id="jesse" src="../Images/jesse.jpeg" alt="Jesse"></div>
 
-                    <br><br>
+                    <p>Jesse is een zeer muzikale man van 41 jaar. 
+                    Hij is de vriend van Hannah. 
+                    In tegenstelling tot Hannah was hij als jonge jongen niet erg geïnteresseerd in muziek en al helemaal niet in muziek maken. 
+                    Hij ging liever buiten spelen met zijn vriendjes of voetballen in het park. 
+                    Zijn ouders vonden het echter wel belangrijk dat hij kennisnam van muziek en ze stuurden Jesse naar blokfluitles. 
+                    Daar leerde hij de beginselen en leerde hij noten lezen.</p><br>
 
-        <p>Veel muziekscholen richten zich op klassieke muziek.<br>
-        Bij Hannah en Jesse kun je echter ook les krijgen in jazzmuziek.<br>
-        Zoals je misschien weet, zijn koperblazers en saxofonisten een zeer belangrijk onderdeel bij jazz.<br>
-        Hannah en Jesse zijn grote jazzliefhebbers en hebben zich hierin gespecialiseerd.</p>
+                    <h3>Opleiding</h3>
 
-        <p>Op deze website vind je veel informatie over wat deze muziekschool te bieden heeft, maar je kunt natuurlijk altijd vrijblijvend langskomen om meer informatie te krijgen.<br>
-        Je kunt dan ook kennismaken en kijken of je een klik hebt met Hannah en/of Jesse.</p>
-    </div>
-</div>
-</section>
-<footer>
-<div class="footer"><h3><strong>©</strong>  copyright 2025 Muziekschool H & J</h3>
-<p>( Dit is de examen opdracht van Youri )</p></div>
-</footer>
-</body>
+                    <p>Op de middelbare school was al duidelijk hoe talentvol hij was. Daarom ging hij naar het conservatorium, waar hij Hannah ontmoette. 
+                    Hij richtte zich op vele verschillende instrumenten en werd opgeleid tot een allround musicus. 
+                    Maar zijn liefde voor de saxofoon en jazz bleef. 
+                    Als bijbaantje gaf hij ook les op een muziekschool en ook dat ging hem goed af.</p><br>
+
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer"><h3><strong>©</strong>  copyright 2025 Muziekschool H & J</h3>
+            <p>( Dit is de examen opdracht van Youri )</p></div>
+        </footer>
+    </body>
 </html>
