--- a/index.html
+++ b/index.html
@@ -6,80 +6,76 @@
       <link rel="icon" type="image/x-icon" href="Images/Favicon.jpg">
       <link rel="stylesheet" type="text/css" href="Css/Stylesheet.css">
       <title>Muziekschool H & J</title>
-<style></style>
-</head>
+    </head>
 
-<body>
-    <header>
-        <div class="header">
-            <h1>Muziekschool H & J</h1>
-            <br>
-            <h3>Luisterend oor <em style=color:orange;>voor</em> talent !</h3>
-        </div>
-    </header>
+    <body>
+        <header>
+            <div class="header">
+                <h1>Muziekschool H & J</h1>
+                <h3>Luisterend oor <em style=color:orange;>voor</em> talent !</h3>
+            </div>
+        </header>
 
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Html/over.html">Over ons</a></li>
-            <li><a href="Html/tarieven.html">Tarieven</a></li>
-            <li><a href="Html/contact.html">Contact</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Html/over.html">Over ons</a></li>
+                <li><a href="Html/tarieven.html">Tarieven</a></li>
+                <li><a href="Html/contact.html">Contact</a></li>
+            </ul>
+        </nav>
 
-<hr>
+        <hr id="hoofd">
 
-<section>
+        <section>
 
-<div class="flex-container">
-    <div class="left">
-        <h2>Muziekschool</h2>
-        <h3>voor koperblazers en saxofonisten</h3>
-        <div><img id="left" src="Images/saxofoon.jpeg" alt="Saxofoon" width="400"></div>
+            <div class="flex-container">
+                <div class="left">
+                    <h2>Muziekschool</h2>
+                    <h4>voor koperblazers en saxofonisten</h4><br>
+                    <div><img id="left" src="Images/saxofoon.jpeg" alt="Saxofoon" width="400"></div>
 
-        <p>Evenals bij de klarinet, is bij de saxofoon aan de onderkant van het mondstuk een enkel stuk riet bevestigd door middel van een metalen band (de saxofoon hoort dan ook bij de enkelriet-instrumenten).</p>
+                    <p>Evenals bij de klarinet, is bij de saxofoon aan de onderkant van het mondstuk een enkel stuk riet bevestigd door middel van een metalen band (de saxofoon hoort dan ook bij de enkelriet-instrumenten).</p>
         
-        <h3>Toonvorming</h3>
+                    <h3>Toonvorming</h3>
 
-        <p>Om geluid uit de saxofoon te krijgen, moet je lucht persen tussen het riet en het mondstuk.
-        Hierdoor breng je het riet in trilling en wordt een toon gemaakt.
-        Kleppen zorgen ervoor dat de gaten, die in de buis van het instrument zijn geboord, afgesloten kunnen worden.
-        Door het indrukken of loslaten van deze kleppen, kun je op dit instrument verschillende tonen maken.</p>
+                    <p>Om geluid uit de saxofoon te krijgen, moet je lucht persen tussen het riet en het mondstuk.
+                    Hierdoor breng je het riet in trilling en wordt een toon gemaakt.
+                    Kleppen zorgen ervoor dat de gaten, die in de buis van het instrument zijn geboord, afgesloten kunnen worden.
+                    Door het indrukken of loslaten van deze kleppen, kun je op dit instrument verschillende tonen maken.</p>
 
-    </div>
+                </div>
 
-    <div class="main">
-        <h2><span>Welkom bij muziekschool H&J</span></h2>
-        <h3>Muziekschool voor koperblazers en saxofonisten</h3>
-        <div><img src="Images/trompet.jpeg" alt="trompet" width="350"></div>
+                <div class="main">
+                    <h2><span>Welkom bij muziekschool H&J</span></h2>
+                    <h4>Muziekschool voor koperblazers en saxofonisten</h4><br>
+                    <div><img id="index" src="Images/trompetspeler.jpeg" alt="Trompet speler" width="400"></div><br>
 
-        <p>Zou het niet leuk zijn als je een saxofoon, trompet of een ander blaasinstrument zou kunnen bespelen ?
-        Dat vergt niet alleen veel oefening, maar het is ook belangrijk dat je daarbij de juiste hulp en ondersteuning krijgt.
-        Hannah en Jesse, de muzikanten achter deze muziekschool, kunnen jou die ondersteuning geven.
-        Ze zijn beiden afgestudeerd aan het conservatorium en hebben veel ervaring met het geven van muziekles.</p>
+                    <p>Zou het niet leuk zijn als je een saxofoon, trompet of een ander blaasinstrument zou kunnen bespelen ?
+                    Dat vergt niet alleen veel oefening, maar het is ook belangrijk dat je daarbij de juiste hulp en ondersteuning krijgt.
+                    Hannah en Jesse, de muzikanten achter deze muziekschool, kunnen jou die ondersteuning geven.
+                    Ze zijn beiden afgestudeerd aan het conservatorium en hebben veel ervaring met het geven van muziekles.</p><br>
 
-        <p>De lessen worden gegeven in een prachtig en functioneel pand, waarin je ongestoord je gang kunt gaan.
-        Ideaal om naar hartenlust te oefenen, zowel individueel als in groepsverband.</p>
+                    <p>De lessen worden gegeven in een prachtig en functioneel pand, waarin je ongestoord je gang kunt gaan.
+                    Ideaal om naar hartenlust te oefenen, zowel individueel als in groepsverband.</p><br>
 
-        <h2><span>SPECIALISATIE</span></h2>
-        <h3>Muziekschool H&J is gespecialiseerd in jazzmuziek.</h3>
-        <div><img src="Images/saxofoon2.jpeg" alt="Saxofoon2" width="350"></div>
+                    <h2><span>SPECIALISATIE</span></h2>
+                    <h4>Muziekschool H&J is gespecialiseerd in jazzmuziek.</h4><br>
+                    <div><img src="Images/saxofoonspeler.jpeg" alt="Saxofoon speler" width="400"></div><br>
 
-                    <br><br>
+                    <p>Veel muziekscholen richten zich op klassieke muziek.
+                    Bij Hannah en Jesse kun je echter ook les krijgen in jazzmuziek.
+                    Zoals je misschien weet, zijn koperblazers en saxofonisten een zeer belangrijk onderdeel bij jazz.
+                    Hannah en Jesse zijn grote jazzliefhebbers en hebben zich hierin gespecialiseerd.</p>
 
-        <p>Veel muziekscholen richten zich op klassieke muziek.
-        Bij Hannah en Jesse kun je echter ook les krijgen in jazzmuziek.
-        Zoals je misschien weet, zijn koperblazers en saxofonisten een zeer belangrijk onderdeel bij jazz.
-        Hannah en Jesse zijn grote jazzliefhebbers en hebben zich hierin gespecialiseerd.</p>
-
-        <p>Op deze website vind je veel informatie over wat deze muziekschool te bieden heeft, maar je kunt natuurlijk altijd vrijblijvend langskomen om meer informatie te krijgen.
-        Je kunt dan ook kennismaken en kijken of je een klik hebt met Hannah en/of Jesse.</p>
-    </div>
-</div>
-</section>
-<footer>
-<div class="footer"><h3><strong>©</strong>  copyright 2025 Muziekschool H & J</h3>
-<p>( Dit is de examen opdracht van Youri )</p></div>
-</footer>
-</body>
+                    <p>Op deze website vind je veel informatie over wat deze muziekschool te bieden heeft, maar je kunt natuurlijk altijd vrijblijvend langskomen om meer informatie te krijgen.
+                    Je kunt dan ook kennismaken en kijken of je een klik hebt met Hannah en/of Jesse.</p><br>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer"><h3><strong>©</strong>  copyright 2025 Muziekschool H & J</h3>
+            <p>( Dit is de examen opdracht van Youri )</p></div>
+        </footer>
+    </body>
 </html>
